<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.artist.ArtistDetailActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_artist_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:id="@+id/card_artist_detail_primary_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Primary Title"
                    android:height="24dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/card_artist_detail_primary_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    tools:text="Primary Description"
                    android:height="20dp"
                    android:textSize="14sp" />

            </LinearLayout>
            <!-- Media -->
            <ImageView
                android:id="@+id/card_artist_detail_image"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/artist_image_description"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/card_artist_detail_secondary_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Title test"
                    android:textAlignment="center"
                    android:height="24dp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/card_artist_detail_secondary_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:textAlignment="center"
                    android:height="20dp"
                    android:textSize="14sp"

                    tools:text="Secondary text test"

                    android:layout_below="@+id/card_artist_detail_secondary_title"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/card_artist_detail_secondary_supporting_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:textAlignment="textStart"
                    android:textSize="14sp"

                    tools:text="Supporting text test" />

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_artist_detail">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/artist_detail_album_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/button_albumes"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/artist_detail_prizes_xd"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_premios"
            android:visibility="invisible"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>